css/icons.css
@import url(https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round|Material+Icons+Sharp);

/* Not inclode |Material+Icons+Two+Tone */

.icon {
	width: 24px;
	height: 24px;
	padding: 0;
	margin: 0;
	border: none;
	box-shadow: none;
	overflow: hidden;
	display: inline-block;
	vertical-align: middle;
	background: transparent none no-repeat 0 0;
	color: #444444;
	font-weight: normal;
	font-size: 24px;
	font-style: normal;
	line-height: 1;
	letter-spacing: normal;
	text-align: center;
	text-transform: none;
	white-space: nowrap;
	word-wrap: normal;
	direction: ltr;
	/* Support for all WebKit browsers. */
	-webkit-font-smoothing: antialiased;
	/* Support for Safari and Chrome. */
	text-rendering: optimizeLegibility;
	/* Support for Firefox. */
	-moz-osx-font-smoothing: grayscale;
	/* Support for IE. */
	font-feature-settings: 'liga';
}

.icon.-sg-16 {width: 16px; height: 16px; font-size: 16px;}
.icon.-sg-24 {width: 24px; height: 24px; font-size: 24px;}
.icon.-sg-32 {width: 32px; height: 32px; font-size: 32px;}
.icon.-sg-48 {width: 48px; height: 48px; font-size: 48px;}
.icon.-sg-64 {width: 64px; height: 64px; font-size: 64px;}

.icon.-gray {color: #808080;}
.icon.-white {color: #f5f5f5; opacity: 0.9;}
.icon.-green {color: green;}
.icon.-yellow {color: #ffb200;}
.icon.-red {color: red;}
.icon.-sg-active {color: green;}
.icon.-sg-inactive {color: #b0b0b0;}

.icon.-material {font-family: 'Material Icons';}
.icon.-material.-normal {font-family: 'Material Icons';}
.icon.-material.-outline {font-family: 'Material Icons Outlined';}
.icon.-material.-two-tone {font-family: 'Material Icons Two Tone';}
.icon.-material.-round {font-family: 'Material Icons Round';}
.icon.-material.-sharp {font-family: 'Material Icons Sharp';}

.icon.-svg {}

.icon>img, .icon>svg {width: 100%; height: 100%; margin: 0; padding: 0; border: none; box-shadow: none; display: block;}

.icon.-circle {border-radius: 50%;}
.icon.-box {border-radius: 4px;}

.icon.-circle.-gray {box-shadow: 0 0 1px 1px #808080;}
.icon.-circle.-green {box-shadow: 0 0 1px 1px green inset; background-color: #dbffdc;}
.icon.-circle.-red {box-shadow: 0 0 1px 1px red inset; background-color: #ffd1d1;}

.icon.-none {text-indent: 0; width: auto; height: auto; background-image: none;}
.icon.-primary {box-shadow: 0 0 0 1px #1477D5 inset; background-color:#1477D5;}
.icon.-warning {box-shadow: 0 0 0 1px #E6A755 inset; background-color:#EEAC57;}
.icon.-danger {box-shadow: 0 0 0 1px #C74F4D inset; background-color:#D75452;}
.icon.-info {box-shadow: 0 0 0 1px #55B6D2 inset; background-color:#60C0DC;}
.icon.-success {box-shadow: 0 0 0 1px #5BAF5C inset; background-color:#5FB660;}
.icon.-unchecked {color: #ddd;}
.icon.-checked {color: green;}





.icon.-edit {background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23444444' viewBox='0 0 24 24'%3E%3Cpath d='M3 17.25v3.75h3.75l11.06-11.06-3.75-3.75-11.06 11.06zm17.71-10.21c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z'/%3E%3Cpath d='M0 0h24v24h-24z' fill='none'/%3E%3C/svg%3E");}
.icon.-edit.-gray {background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23808080' viewBox='0 0 24 24'%3E%3Cpath d='M3 17.25v3.75h3.75l11.06-11.06-3.75-3.75-11.06 11.06zm17.71-10.21c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z'/%3E%3Cpath d='M0 0h24v24h-24z' fill='none'/%3E%3C/svg%3E");}
.icon.-edit.-white {background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23f5f5f5' viewBox='0 0 24 24'%3E%3Cpath d='M3 17.25v3.75h3.75l11.06-11.06-3.75-3.75-11.06 11.06zm17.71-10.21c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z'/%3E%3Cpath d='M0 0h24v24h-24z' fill='none'/%3E%3C/svg%3E");}




.icon.-dropbox {background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23444444' viewBox='0 0 24 24'%3E%3Cpath d='M0 0h24v24h-24z' fill='none'/%3E%3Cpath d='M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z'/%3E%3C/svg%3E");}
.icon.-dropbox.-gray {background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23808080' viewBox='0 0 24 24'%3E%3Cpath d='M0 0h24v24h-24z' fill='none'/%3E%3Cpath d='M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z'/%3E%3C/svg%3E");}
.icon.-dropbox.-white {background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23f5f5f5' viewBox='0 0 24 24'%3E%3Cpath d='M0 0h24v24h-24z' fill='none'/%3E%3Cpath d='M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z'/%3E%3C/svg%3E");}





.icon.-person {background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23444444' viewBox='0 0 24 24'%3E%3Cpath d='M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z'/%3E%3Cpath d='M0 0h24v24h-24z' fill='none'/%3E%3C/svg%3E");}

.icon.-person.-gray {background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23808080' viewBox='0 0 24 24'%3E%3Cpath d='M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z'/%3E%3Cpath d='M0 0h24v24h-24z' fill='none'/%3E%3C/svg%3E");}
/* ... */

